[gd_scene load_steps=18 format=2]

[ext_resource path="res://Scripts/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://Themes/Fonts/Montserrat-Black.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Scripts/SettingsMainMenu.gd" type="Script" id=3]
[ext_resource path="res://Scripts/PlayerSettings.gd" type="Script" id=4]
[ext_resource path="res://Scripts/StoragePlayer.gd" type="Script" id=5]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.0823529, 0.670588, 0, 1 )
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.843137, 0.890196, 0, 1 )
corner_radius_top_left = 11
corner_radius_top_right = 11
corner_radius_bottom_right = 11
corner_radius_bottom_left = 11

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.313726, 0.776471, 0.309804, 1 )
corner_radius_top_left = 11
corner_radius_top_right = 11
corner_radius_bottom_right = 11
corner_radius_bottom_left = 11

[sub_resource type="DynamicFont" id=4]
size = 64
outline_size = 5
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.196078, 0.505882, 0.733333, 1 )
corner_radius_top_left = 11
corner_radius_top_right = 11
corner_radius_bottom_right = 11
corner_radius_bottom_left = 11

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.843137, 0.890196, 0, 1 )
corner_radius_top_left = 11
corner_radius_top_right = 11
corner_radius_bottom_right = 11
corner_radius_bottom_left = 11

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.309804, 0.654902, 0.776471, 1 )
corner_radius_top_left = 11
corner_radius_top_right = 11
corner_radius_bottom_right = 11
corner_radius_bottom_left = 11

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.670588, 0, 0, 1 )
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.776471, 0.309804, 0.309804, 1 )
corner_radius_top_left = 11
corner_radius_top_right = 11
corner_radius_bottom_right = 11
corner_radius_bottom_left = 11

[sub_resource type="Animation" id=10]
resource_name = "slididoo"
length = 0.6
tracks/0/type = "bezier"
tracks/0/path = NodePath("Sensetivity:rect_position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.6 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("Sensetivity:rect_position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 680, -0.25, 0, 0.25, 0, 80, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.6 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("ViewmodelX:rect_position:x")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.6 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("ViewmodelX:rect_position:y")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 744, -0.25, 0, 0.25, 0, 144, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.6 )
}
tracks/4/type = "bezier"
tracks/4/path = NodePath("ViewmodelY:rect_position:x")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.6 )
}
tracks/5/type = "bezier"
tracks/5/path = NodePath("ViewmodelY:rect_position:y")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"points": PoolRealArray( 808, -0.25, 0, 0.25, 0, 208, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.6 )
}
tracks/6/type = "bezier"
tracks/6/path = NodePath("SensShower:rect_position:x")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"points": PoolRealArray( 440, -0.25, 0, 0.25, 0, 440, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.6 )
}
tracks/7/type = "bezier"
tracks/7/path = NodePath("SensShower:rect_position:y")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"points": PoolRealArray( 672, -0.25, 0, 0.25, 0, 72, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.6 )
}
tracks/8/type = "bezier"
tracks/8/path = NodePath("ViewModelXShower:rect_position:x")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"points": PoolRealArray( 440, -0.25, 0, 0.25, 0, 440, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.6 )
}
tracks/9/type = "bezier"
tracks/9/path = NodePath("ViewModelXShower:rect_position:y")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"points": PoolRealArray( 744, -0.25, 0, 0.25, 0, 144, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.6 )
}
tracks/10/type = "bezier"
tracks/10/path = NodePath("ViewModelYShower:rect_position:x")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"points": PoolRealArray( 440, -0.25, 0, 0.25, 0, 440, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.6 )
}
tracks/11/type = "bezier"
tracks/11/path = NodePath("ViewModelYShower:rect_position:y")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/keys = {
"points": PoolRealArray( 808, -0.25, 0, 0.25, 0, 208, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.6 )
}

[sub_resource type="DynamicFont" id=11]
size = 26
outline_size = 5
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="Animation" id=12]
length = 0.667
tracks/0/type = "bezier"
tracks/0/path = NodePath("Panel:rect_position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.6 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("Panel:rect_position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 600, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.6 )
}

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Start" type="Button" parent="."]
margin_left = 288.0
margin_top = 136.0
margin_right = 472.0
margin_bottom = 216.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
custom_fonts/font = SubResource( 4 )
text = "Start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Settings" type="Button" parent="."]
margin_left = 232.0
margin_top = 232.0
margin_right = 536.0
margin_bottom = 312.0
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
custom_fonts/font = SubResource( 4 )
text = "Settings"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quit" type="Button" parent="."]
margin_left = 288.0
margin_top = 328.0
margin_right = 472.0
margin_bottom = 408.0
custom_styles/hover = SubResource( 8 )
custom_styles/pressed = SubResource( 2 )
custom_styles/normal = SubResource( 9 )
custom_fonts/font = SubResource( 4 )
text = "Quit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Node" type="Node" parent="."]
script = ExtResource( 3 )

[node name="Panel" type="Panel" parent="Node"]
margin_top = 600.0
margin_right = 800.0
margin_bottom = 1200.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Back" type="Button" parent="Node/Panel"]
margin_left = 288.0
margin_top = 496.0
margin_right = 472.0
margin_bottom = 576.0
custom_styles/hover = SubResource( 8 )
custom_styles/pressed = SubResource( 2 )
custom_styles/normal = SubResource( 9 )
custom_fonts/font = SubResource( 4 )
text = "back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Node" type="Node" parent="Node/Panel"]
script = ExtResource( 4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Node/Panel/Node"]
anims/slididoo = SubResource( 10 )

[node name="Sensetivity" type="HSlider" parent="Node/Panel/Node"]
margin_top = 680.0
margin_right = 432.0
margin_bottom = 720.0
max_value = 0.3
step = 0.01
value = 0.11
tick_count = 25
ticks_on_borders = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ViewmodelX" type="HSlider" parent="Node/Panel/Node"]
margin_top = 744.0
margin_right = 432.0
margin_bottom = 784.0
min_value = -0.6
max_value = 0.2
step = 0.01
value = 0.2
tick_count = 25
ticks_on_borders = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ViewmodelY" type="HSlider" parent="Node/Panel/Node"]
margin_top = 808.0
margin_right = 432.0
margin_bottom = 848.0
min_value = -0.6
max_value = 0.2
step = 0.01
value = 0.2
tick_count = 25
ticks_on_borders = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SensShower" type="Label" parent="Node/Panel/Node"]
margin_left = 440.0
margin_top = 672.0
margin_right = 598.0
margin_bottom = 709.0
custom_fonts/font = SubResource( 11 )
text = "1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ViewModelXShower" type="Label" parent="Node/Panel/Node"]
margin_left = 440.0
margin_top = 744.0
margin_right = 598.0
margin_bottom = 781.0
custom_fonts/font = SubResource( 11 )
text = "1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ViewModelYShower" type="Label" parent="Node/Panel/Node"]
margin_left = 440.0
margin_top = 808.0
margin_right = 598.0
margin_bottom = 845.0
custom_fonts/font = SubResource( 11 )
text = "1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Node" type="Node" parent="Node/Panel/Node"]
script = ExtResource( 5 )

[node name="Label4" type="Label" parent="Node/Panel"]
margin_left = 8.0
margin_top = 40.0
margin_right = 166.0
margin_bottom = 77.0
custom_fonts/font = SubResource( 11 )
text = "Sensetivity"

[node name="Label2" type="Label" parent="Node/Panel"]
margin_left = 8.0
margin_top = 112.0
margin_right = 166.0
margin_bottom = 149.0
custom_fonts/font = SubResource( 11 )
text = "Viewmodel X"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="Node/Panel"]
margin_left = 8.0
margin_top = 184.0
margin_right = 192.0
margin_bottom = 217.0
custom_fonts/font = SubResource( 11 )
text = "Viewmodel Y"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="Node"]
anims/SlidePanel = SubResource( 12 )

[connection signal="pressed" from="Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="Settings" to="Node" method="_on_Settings_pressed"]
[connection signal="pressed" from="Quit" to="." method="_on_Quit_pressed"]
[connection signal="pressed" from="Node/Panel/Back" to="Node" method="_on_Back_pressed"]
[connection signal="value_changed" from="Node/Panel/Node/Sensetivity" to="Node/Panel/Node" method="_on_Sensetivity_value_changed"]
[connection signal="value_changed" from="Node/Panel/Node/ViewmodelX" to="Node/Panel/Node" method="_on_ViewmodelX_value_changed"]
[connection signal="value_changed" from="Node/Panel/Node/ViewmodelY" to="Node/Panel/Node" method="_on_ViewmodelY_value_changed"]
